refactor (Landing Page) added images and enhanced code

--- a/index.html
+++ b/index.html
@@ -10,33 +10,41 @@
 
     <header>
         <div class="logo">
-            <h1>Film88</h1>
+            <img src="./assets/img/logoc.png" alt="Film88 Logo">
         </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
-                <li><a href="booking.html">Book Now</a></li>
+                <li><a href="#booknow">Book Now</a></li>
             </ul>
         </nav>
     </header>
 
+    <section id="landing">
+        <div class="landing-content">
+            <h1>Welcome to Film88</h1>
+            <p>Your ultimate movie exprience starts here.</p>
+        </div>
+    </section>
+
     <section id="home" class="main-section">
-        <h2>Welcome to Cinema Booking</h2>
-        <p>Your one-stop destination to easily book your movie tickets. Choose from a wide selection of movies and book seats with just a few clicks.</p>
-        <a href="booking.html" class="cta-btn">Book Your Tickets</a>
+        <div class="container">
+            <div class="text-container">
+                <h2>Welcome to Film88!</h2>
+                <p>A place where stories come to life and magic unfolds before your eyes! At Film88, <br> we believe movies are more than just entertainment—they're an experience meant to be shared.  Whether you're here for heart-pounding action, tear-jerking dramas, <br>or laugh-out-loud comedies, we've got something for everyone.</p> <br>
+                <p>So grab your popcorn, find the perfect seat, and let the     adventure begin!</p>
+                <a href="booking.html" class="cta-btn">Learn More</a>
+                </div>
+                <div class="image-content">
+                    <img src="./assets/img/logosq.png" alt="Film88 Logo">
+                </div>
+            </div>
     </section>
-
-
-    <section id="about" class="about-section">
-        <h2>About Us</h2>
-        <p>We provide an easy and convenient way for movie lovers to book tickets online, so you can enjoy your favorite movies hassle-free. Join us and book now!</p>
-    </section>
-
 
     <footer>
-        <p>&copy; 2025 Cinema Booking. All rights reserved.</p>
-        <p>Contact us: cinema@booking.com | Phone: 123-456-7890</p>
+        <p>&copy; 2025 Film88. All rights reserved.</p>
+        <p>Contact us: film88@booking.com | Phone: 123-456-7890</p>
     </footer>
 
     <script src="script.js"></script>
