--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#booknow">Book Now</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pages/upcomingmovies/index.html">About Us</a></li>
+                <li><a href="./pages/booknow/index.html">Book Now</a></li>
             </ul>
         </nav>
     </header>
