refactor (Landing Page): enhanced css and html, added image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <section id="landing">
         <div class="landing-content">
+            <div class="logo-overlay">
+                <img src="./assets/img/logo.png" alt="Film88 Logo">
+            </div>
             <h1>Welcome to Film88</h1>
             <p>Your ultimate movie exprience starts here.</p>
         </div>
