refactor (Landing Page): fixed linking and name of navigation buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/upcomingmovies/index.html">About Us</a></li>
-                <li><a href="./pages/booknow/index.html">Book Now</a></li>
+                <li><a href="./pages/upcomingmovies/index.html">Movies</a></li>
+                <li><a href="./pages/booknow/index.html">Loyalty</a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +37,7 @@
                 <h2>Welcome to Film88!</h2>
                 <p>A place where stories come to life and magic unfolds before your eyes! At Film88, <br> we believe movies are more than just entertainment—they're an experience meant to be shared.  Whether you're here for heart-pounding action, tear-jerking dramas, <br>or laugh-out-loud comedies, we've got something for everyone.</p> <br>
                 <p>So grab your popcorn, find the perfect seat, and let the     adventure begin!</p>
-                <a href="booking.html" class="cta-btn">Learn More</a>
+                <a href="./index.html" class="cta-btn">Learn More</a>
                 </div>
                 <div class="image-content">
                     <img src="./assets/img/logosq.png" alt="Film88 Logo">
