fix (loyalty and movies pages): fixed linking

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/upcomingmovies/index.html">Movies</a></li>
-                <li><a href="./pages/booknow/index.html">Loyalty</a></li>
+                <li><a href="./pages/movies/index.html">Movies</a></li>
+                <li><a href="./pages/loyalty/index.html">Loyalty</a></li>
             </ul>
         </nav>
     </header>
