--- a/pages/loyalty/index.html
+++ b/pages/loyalty/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema Booking</title>
-    <link rel="stylesheet" href="../booknow/assets/css/style.css">
+    <link rel="stylesheet" href="../loyalty/assets/css/style.css">
 </head>
 <body>
     <header>
@@ -13,16 +13,16 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="../upcomingmovies/index.html">Movies</a></li>
-                <li><a href="../booknow/index.html">Loyalty</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../movies/index.html">Movies</a></li>
+                <li><a href="../loyalty/index.html">Loyalty</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
         <div class="ticket-container">
-            <div class="ticket-box"> 
+            <div class="ticket-box">
                 <h2>Pick Tickets</h2>
                 <p>Browse and book sessions easily.</p>
                 <div class="ticket-options">
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="promo">
-                <img src="../booknow/assets/img/welcome to film88.gif" alt="Promo Image">
+                <img src="../loyalty/assets/img/welcome to film88.gif" alt="Promo Image">
             </div>
         </div>
     </section>
