--- a/pages/loyalty/index.html
+++ b/pages/loyalty/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema Booking</title>
     <link rel="stylesheet" href="../loyalty/assets/css/style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -32,11 +35,37 @@
                     <button>Pick a Time</button>
                 </div>
             </div>
+
             <div class="promo">
-                <img src="../loyalty/assets/img/welcome to film88.gif" alt="Promo Image">
+                <div id="promoCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../loyalty/assets/img/welcome to film88.gif" class="d-block w-100" alt="Promo Image 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../loyalty/assets/img/MembershipIDCard.png" class="d-block w-100" alt="Promo Image 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../loyalty/assets/img/promo3.jpg" class="d-block w-100" alt="Promo Image 3">
+                        </div>
+                    </div>
+
+                    <!-- Left and Right Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#promoCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#promoCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </div>
     </section>
+
+    <!-- Bootstrap JS (Required for Carousel) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <section class="membership-container">
         <div class="membership">
@@ -52,6 +81,7 @@
                 <button class="signup">Sign Up</button>
             </div>
         </div>
+
         <div class="login">
             <form>
                 <input type="email" placeholder="Email">
