fix (movies and loyalty pages): fixed linking of js

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
         <p>Contact us: film88@booking.com | Phone: 123-456-7890</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
