--- a/pages/loyalty/index.html
+++ b/pages/loyalty/index.html
@@ -100,6 +100,6 @@
         <p>Contact us: film88@booking.com | Phone: 123-456-7890</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../loyalty/assets/js/scripts.js"></script>
 </body>
 </html>
