fix (movies page): enhanced html and css codes

--- a/pages/movies/index.html
+++ b/pages/movies/index.html
@@ -87,6 +87,9 @@
         </select>
 
         <button id="submit">Submit Booking</button>
+        <a href="#" id="back" class="back">Back</a>
+
+        <p id="confirmation-message" style="color: green; font-weight: bold; display: none;">Booking Confirmed!</p>
     </div>
 
     <footer>
