--- a/pages/movies/index.html
+++ b/pages/movies/index.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+
+    <video autoplay muted loop id="bg-video">
+        <source src="../movies/assets/img/bg.mp4" type="video/mp4">
+    </video>
+
     <header>
         <div class="logo">
             <img src="./assets/img/logoc.png" alt="Film88 Logo">
