--- a/pages/movies/index.html
+++ b/pages/movies/index.html
@@ -28,9 +28,8 @@
     </header>
 
     <div class="container">
-        <h1>Book Your Seat</h1>
-        <p><strong>Movie: Hello, Love, Goodbye</strong></p>
-        <p><strong>Price:</strong> P350</p>
+        <h1 class="movie-title">Hello, Love, Goodbye</h1>
+        <p class="movie-price"><strong>Price:</strong> P350</p>
 
         <label for="location">Location:</label>
         <select id="location">
