--- a/pages/hlg/index.html
+++ b/pages/hlg/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../movies/assets/css/style.css">
+    <link rel="stylesheet" href="../hlg/assets/css/style.css">
 
 </head>
 <body>
 
     <video autoplay muted loop id="bg-video">
-        <source src="../movies/assets/img/bg.mp4" type="video/mp4">
+        <source src="../hlg/assets/img/bg.mp4" type="video/mp4">
     </video>
 
     <header>
         <div class="logo">
-            <img src="./assets/img/logoc.png" alt="Film88 Logo">
+            <img src="../hlg/assets/img/logoc.png" alt="Film88 Logo">
         </div>
         <nav>
             <ul>
@@ -101,7 +101,7 @@
         <p>Contact us: film88@booking.com | Phone: 123-456-7890</p>
     </footer>
 
-    <script src="../movies/assets/js/scripts.js"></script>
+    <script src="../hlg/assets/js/scripts.js"></script>
 
 </body>
 </html>
