--- a/pages/movies/index.html
+++ b/pages/movies/index.html
@@ -19,9 +19,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="./pages/movies/index.html">Movies</a></li>
-                <li><a href="./pages/loyalty/index.html">Loyalty</a></li>
+                <li><a href="../loyalty/index.html">Loyalty</a></li>
             </ul>
         </nav>
     </header>
