fix (movies page): fixed linking

--- a/pages/movies/index.html
+++ b/pages/movies/index.html
@@ -41,7 +41,7 @@
                     <img src="../movies/img/hlaposter.jpg" alt="Hello, Love, Again">
                     <h3>Hello, Love, Again</h3>
                     <p>The sequel continues the journey of love with unexpected turns.</p>
-                    <a href="../booking/hla.html" class="buy-btn">Buy Tickets</a>
+                    <a href="../hla/index.html" class="buy-btn">Buy Tickets</a>
                 </div>
             </div>
         </section>
