--- a/pages/movies/index.html
+++ b/pages/movies/index.html
@@ -33,14 +33,16 @@
                 <div class="movie-card">
                     <img src="../movies/img/hlgposter.jpg" alt="Hello, Love, Goodbye">
                     <h3>Hello, Love, Goodbye</h3>
-                    <p>A heartwarming story of love and sacrifice in a foreign land.</p>
+                    <p>A bartender falls for a domestic helper moving to Canada. Their relationship is complicated by her departure for a new life.</p>
+                    <div class="btn-spacing"></div>
                     <a href="../hlg/index.html" class="buy-btn">Buy Tickets</a>
                 </div>
 
                 <div class="movie-card">
                     <img src="../movies/img/hlaposter.jpg" alt="Hello, Love, Again">
                     <h3>Hello, Love, Again</h3>
-                    <p>The sequel continues the journey of love with unexpected turns.</p>
+                    <p>Joy and Ethan reunite in Canada after overcoming time and distance. They realize they’ve changed, and their bond is tested.</p>
+                    <div class="btn-spacing"></div>
                     <a href="../hla/index.html" class="buy-btn">Buy Tickets</a>
                 </div>
             </div>
@@ -52,21 +54,24 @@
                 <div class="movie-card">
                     <img src="../movies/img/IO2.jpg" alt="Inside Out 2">
                     <h3>Inside Out 2</h3>
-                    <p>New emotions join the fun as Riley faces teenage challenges.</p>
+                    <p>Riley enters puberty and faces complex new emotions. Her old emotions struggle with the changes and fear being replaced.</p>
+                    <div class="btn-spacing"></div>
                     <a href="../movies/info/io2.html" class="buy-btn">More Info</a>
                 </div>
 
                 <div class="movie-card">
                     <img src="../movies/img/Rposter.jpg" alt="Re:ZERO">
-                    <h3>Re:ZERO</h3>
-                    <p>Subaru's journey continues in this thrilling anime adventure.</p>
+                    <h3>Re:ZERO - Starting Life in Aother World</h3>
+                    <p>Subaru is transported to another world and killed with his partner. He wakes up, and the day mysteriously repeats itself again.</p>
+                    <div class="btn-spacing"></div>
                     <a href="../movies/info/rezero.html" class="buy-btn">More Info</a>
                 </div>
 
                 <div class="movie-card">
                     <img src="../movies/img/Iposter.jpg" alt="Incantation">
                     <h3>INCANTATION</h3>
-                    <p>A terrifying horror film based on true events.</p>
+                    <p>Li Ronan was cursed for breaking a taboo years ago. Now, she must protect her daughter from the curse’s consequences.</p>
+                    <div class="btn-spacing"></div>
                     <a href="../movies/info/incantation.html" class="buy-btn">More Info</a>
                 </div>
             </div>
