refactor (loyalty page): enhanced css code and added img

--- a/pages/loyalty/index.html
+++ b/pages/loyalty/index.html
@@ -46,11 +46,10 @@
                             <img src="../loyalty/assets/img/MembershipIDCard.png" class="d-block w-100" alt="Promo Image 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="../loyalty/assets/img/promo3.jpg" class="d-block w-100" alt="Promo Image 3">
+                            <img src="../loyalty/assets/img/promo.png" class="d-block w-100" alt="Promo Image 3">
                         </div>
                     </div>
 
-                    <!-- Left and Right Controls -->
                     <button class="carousel-control-prev" type="button" data-bs-target="#promoCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
@@ -64,18 +63,12 @@
         </div>
     </section>
 
-    <!-- Bootstrap JS (Required for Carousel) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <section class="membership-container">
         <div class="membership">
             <h3>Get in on the action!</h3>
             <p>Club membership for everyone.</p>
-            <ul>
-                <li>Early Bird Access</li>
-                <li>Free Snacks</li>
-                <li>Birthday Perks</li>
-            </ul>
             <div class="membership-buttons">
                 <button class="activate">Activate Card</button>
                 <button class="signup">Sign Up</button>
