fix (hlg page): fixed typo error

--- a/pages/hlg/index.html
+++ b/pages/hlg/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <h1 class="movie-title">Hello, Love, Goodbye</h1>
-        <p class="movie-price"><strong>Price:</strong> P350</p>
+        <p class="movie-price"><strong>Price:</strong> ₱350</p>
 
         <label for="location">Location:</label>
         <select id="location">
