fix (loyalty page): fixed img problem

--- a/pages/loyalty/index.html
+++ b/pages/loyalty/index.html
@@ -39,9 +39,15 @@
             <div class="promo">
                 <div id="promoCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
+                        <!-- Change this section: -->
                         <div class="carousel-item active">
-                            <img src="../loyalty/assets/img/welcome to film88.gif" class="d-block w-100" alt="Promo Image 1">
+                            <video class="d-block w-100" autoplay loop muted> <!-- Use the video tag for mp4 -->
+                                <source src="../loyalty/assets/img/welcome to film88.mp4" type="video/mp4"> <!-- Update the source -->
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
+                        <!-- End of change -->
+
                         <div class="carousel-item">
                             <img src="../loyalty/assets/img/MembershipIDCard.png" class="d-block w-100" alt="Promo Image 2">
                         </div>
